# ride

./: .gitignore  Cargo.toml  LICENCE.md  README.md
assets/: teapot.fs
assets_core/shaders/: ._basic.fs  basic.vs
coin_platformer_ride/: Cargo.toml
coin_platformer_ride/src/: character.rs  coin.rs  level.rs  main.rs
ride/: Cargo.toml  lookatdocumentation.txt  rustfmt.toml
ride/src/: asset.rs  core.rs  engine.rs  entity.rs  lib.rs
ride/src/assets/: image.rs  material.rs  mod.rs  renderable.rs  shader.rs  texture.rs
ride/src/entities/: camera.rs
scan_fmt_count/: Cargo.toml
scan_fmt_count/src/: lib.rs
teapot_ride/: Cargo.toml  build.rs  enable_incremental.sh
teapot_ride/assets/: teapot.bmf  teapot.vs
teapot_ride/assets_core/shaders/: ._basic.vs  basic.fs
teapot_ride/src/: main.rs
